--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,3 +1,8 @@
+# Rule Documentation: https://realm.github.io/SwiftLint/rule-directory.html
+# Example implementation: https://novinfard.medium.com/swiftlint-in-use-279f44b3182e
 
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Pods
+
+identifier_name:
+  excluded: ["vc", "id", "i", "j", "a", "b", "x", "y"]
