--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -5,4 +5,8 @@ excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Pods
 
 identifier_name:
-  excluded: ["vc", "id", "i", "j", "a", "b", "x", "y"]
+  excluded: ["vc", "id", "i", "j", "a", "b", "x", "y", "m", "n"]
+
+line_length:
+  warning: 240 # Default 120
+  error: 700 # Default 350
